finished user service test, I think.